--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "exports-size",
-  "version": "0.0.",
-  "main": "index.js",
+  "name": "export-size",
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
+  "bin": {
+    "export-size": "bin/export-size"
+  },
+  "files": [
+    "dist",
+    "src",
+    "bin"
+  ],
   "scripts": {
-    "dev": "esno ./scripts/cli.ts"
+    "dev": "esno src/dev.ts",
+    "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts",
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.3.3",
     "eslint": "^7.10.0",
     "esno": "^0.2.0",
+    "tsup": "^3.7.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
@@ -25,7 +37,6 @@
     "gzip-size": "^5.1.1",
     "package-build-stats": "^6.2.2",
     "rollup": "^2.28.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "yargs": "^16.0.3"
   },
