--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^14.11.5",
     "chalk": "^4.1.0",
     "cli-progress": "^3.8.2",
+    "cli-table3": "^0.6.0",
     "enhanced-resolve": "^5.2.0",
     "filesize": "^6.1.0",
     "fs-extra": "^9.0.1",
