--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "dev": "esno src/cli.ts",
     "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "release": "npx bumpp --commit --push --tag && npm publish"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.3.3",
