--- a/package.json
+++ b/package.json
@@ -29,26 +29,25 @@
     "@antfu/eslint-config": "^0.3.3",
     "@types/cli-progress": "^3.8.0",
     "@types/yargs": "^15.0.7",
+    "@types/fs-extra": "^9.0.1",
+    "@types/node": "^14.11.5",
     "eslint": "^7.10.0",
     "esno": "^0.2.0",
+    "lodash-es": "^4.17.15",
     "tsup": "^3.7.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "@babel/parser": "^7.11.5",
     "@babel/traverse": "^7.11.5",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/fs-extra": "^9.0.1",
-    "@types/node": "^14.11.5",
     "chalk": "^4.1.0",
     "cli-progress": "^3.8.2",
     "cli-table3": "^0.6.0",
     "enhanced-resolve": "^5.2.0",
+    "esbuild": "^0.7.13",
     "filesize": "^6.1.0",
     "fs-extra": "^9.0.1",
     "gzip-size": "^5.1.1",
-    "rollup": "^2.28.2",
-    "rollup-plugin-terser": "^7.0.2",
     "yargs": "^16.0.3"
   },
   "eslintConfig": {
