--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "export-size",
   "version": "0.1.1",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
