--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.3.3",
     "@types/cli-progress": "^3.8.0",
-    "@types/yargs": "^15.0.7",
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.11.5",
+    "@types/yargs": "^15.0.7",
     "eslint": "^7.10.0",
     "esno": "^0.2.0",
     "lodash-es": "^4.17.15",
@@ -41,6 +41,7 @@
   "dependencies": {
     "@babel/parser": "^7.11.5",
     "@babel/traverse": "^7.11.5",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "chalk": "^4.1.0",
     "cli-progress": "^3.8.2",
     "cli-table3": "^0.6.0",
@@ -49,6 +50,8 @@
     "filesize": "^6.1.0",
     "fs-extra": "^9.0.1",
     "gzip-size": "^5.1.1",
+    "rollup": "^2.29.0",
+    "terser": "^5.3.5",
     "yargs": "^16.0.3"
   },
   "eslintConfig": {
