fix: rollup builds for local pacakge

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "export-size",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -29,30 +29,30 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.3.3",
     "@types/cli-progress": "^3.8.0",
-    "@types/fs-extra": "^9.0.1",
-    "@types/node": "^14.11.5",
-    "@types/yargs": "^15.0.7",
-    "eslint": "^7.10.0",
-    "esno": "^0.2.0",
+    "@types/fs-extra": "^9.0.2",
+    "@types/node": "^14.11.8",
+    "@types/yargs": "^15.0.8",
+    "eslint": "^7.11.0",
+    "esno": "^0.2.2",
     "lodash-es": "^4.17.15",
     "tsup": "^3.7.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@babel/parser": "^7.11.5",
-    "@babel/traverse": "^7.11.5",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "chalk": "^4.1.0",
-    "cli-progress": "^3.8.2",
-    "cli-table3": "^0.6.0",
-    "enhanced-resolve": "^5.2.0",
-    "esbuild": "^0.7.13",
-    "filesize": "^6.1.0",
-    "fs-extra": "^9.0.1",
-    "gzip-size": "^5.1.1",
-    "rollup": "^2.29.0",
-    "terser": "^5.3.5",
-    "yargs": "^16.0.3"
+    "@babel/parser": "7.12.1",
+    "@babel/traverse": "7.12.1",
+    "@rollup/plugin-node-resolve": "9.0.0",
+    "chalk": "4.1.0",
+    "cli-progress": "3.8.2",
+    "cli-table3": "0.6.0",
+    "enhanced-resolve": "5.2.0",
+    "esbuild": "0.7.15",
+    "filesize": "6.1.0",
+    "fs-extra": "9.0.1",
+    "gzip-size": "5.1.1",
+    "rollup": "2.31.0",
+    "terser": "5.3.5",
+    "yargs": "16.1.0"
   },
   "eslintConfig": {
     "extends": "@antfu"
