feat: use brotli for size calc

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.4.3",
     "@types/cli-progress": "^3.8.0",
-    "@types/fs-extra": "^9.0.2",
-    "@types/node": "^14.14.5",
+    "@types/fs-extra": "^9.0.3",
+    "@types/node": "^14.14.6",
     "@types/yargs": "^15.0.9",
     "eslint": "^7.12.1",
     "esno": "^0.2.4",
@@ -39,18 +39,19 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@babel/parser": "7.12.3",
-    "@babel/traverse": "7.12.1",
+    "@babel/parser": "7.12.5",
+    "@babel/traverse": "7.12.5",
     "@rollup/plugin-node-resolve": "10.0.0",
+    "brotli-size": "4.0.0",
     "chalk": "4.1.0",
     "cli-progress": "3.8.2",
     "cli-table3": "0.6.0",
     "enhanced-resolve": "5.3.1",
-    "esbuild": "0.7.21",
+    "esbuild": "0.8.3",
     "filesize": "6.1.0",
     "fs-extra": "9.0.1",
     "gzip-size": "5.1.1",
-    "rollup": "2.32.1",
+    "rollup": "2.33.1",
     "terser": "5.3.8",
     "yargs": "16.1.0"
   },
