chore: update deps to range

--- a/package.json
+++ b/package.json
@@ -23,37 +23,37 @@
   "scripts": {
     "dev": "esno src/cli.ts",
     "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts",
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
     "release": "npx bumpp --commit --push --tag && npm publish"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.4.3",
     "@types/cli-progress": "^3.8.0",
-    "@types/fs-extra": "^9.0.3",
-    "@types/node": "^14.14.6",
+    "@types/fs-extra": "^9.0.4",
+    "@types/node": "^14.14.7",
     "@types/yargs": "^15.0.9",
-    "eslint": "^7.12.1",
+    "eslint": "^7.13.0",
     "esno": "^0.2.4",
     "lodash-es": "^4.17.15",
-    "tsup": "^3.7.1",
+    "tsup": "^3.8.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@babel/parser": "7.12.5",
-    "@babel/traverse": "7.12.5",
-    "@rollup/plugin-node-resolve": "10.0.0",
-    "brotli-size": "4.0.0",
-    "chalk": "4.1.0",
-    "cli-progress": "3.8.2",
-    "cli-table3": "0.6.0",
-    "enhanced-resolve": "5.3.1",
-    "esbuild": "0.8.3",
-    "filesize": "6.1.0",
-    "fs-extra": "9.0.1",
-    "gzip-size": "5.1.1",
-    "rollup": "2.33.1",
-    "terser": "5.3.8",
-    "yargs": "16.1.0"
+    "@babel/parser": "^7.12.5",
+    "@babel/traverse": "^7.12.5",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "brotli-size": "^4.0.0",
+    "chalk": "^4.1.0",
+    "cli-progress": "^3.8.2",
+    "cli-table3": "^0.6.0",
+    "enhanced-resolve": "^5.3.1",
+    "esbuild": "^0.8.7",
+    "filesize": "^6.1.0",
+    "fs-extra": "^9.0.1",
+    "gzip-size": "^5.1.1",
+    "rollup": "^2.33.2",
+    "terser": "^5.3.8",
+    "yargs": "^16.1.1"
   },
   "eslintConfig": {
     "extends": "@antfu"
