chore: rename pkg name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sxzz/export-size",
+  "name": "export-size",
   "version": "0.6.0",
   "packageManager": "pnpm@8.6.12",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
