--- a/package.json
+++ b/package.json
@@ -1,62 +1,70 @@
 {
   "name": "export-size",
   "version": "0.5.2",
+  "packageManager": "pnpm@8.6.12",
+  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "license": "MIT",
   "homepage": "https://github.com/antfu/export-size#readme",
-  "bugs": "https://github.com/antfu/export-size/issues",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/antfu/export-size.git"
   },
-  "license": "MIT",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "bugs": "https://github.com/antfu/export-size/issues",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "bin": {
-    "export-size": "bin/export-size.js"
+    "export-size": "bin/export-size.mjs"
   },
   "files": [
     "dist",
-    "src",
     "bin"
   ],
   "scripts": {
-    "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts",
+    "build": "tsup",
     "dev": "esno src/cli.ts",
     "prepublishOnly": "npm run build",
-    "release": "npx bumpp --commit --push --tag && npm publish"
-  },
-  "eslintConfig": {
-    "extends": "@antfu"
+    "release": "bumpp && npm publish"
   },
   "dependencies": {
-    "@babel/parser": "^7.15.8",
-    "@babel/traverse": "^7.15.4",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "brotli-size": "^4.0.0",
+    "@babel/parser": "^7.22.10",
+    "@babel/traverse": "^7.22.10",
+    "@rollup/plugin-node-resolve": "^15.2.0",
     "chalk": "^4.1.2",
-    "cli-progress": "^3.9.1",
-    "cli-table3": "^0.6.0",
-    "enhanced-resolve": "^5.8.3",
-    "esbuild": "^0.13.8",
-    "filesize": "^8.0.3",
-    "fs-extra": "^10.0.0",
-    "gzip-size": "^6.0.0",
-    "rollup": "^2.58.0",
-    "terser": "^5.9.0",
-    "yargs": "^17.2.1"
+    "cli-progress": "^3.12.0",
+    "cli-table3": "^0.6.3",
+    "enhanced-resolve": "^5.15.0",
+    "esbuild": "^0.19.2",
+    "filesize": "^10.0.12",
+    "fs-extra": "^11.1.1",
+    "rollup": "^3.28.0",
+    "terser": "^5.19.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.10.0",
-    "@types/cli-progress": "^3.9.2",
-    "@types/fs-extra": "^9.0.13",
-    "@types/node": "^16.11.1",
-    "@types/yargs": "^17.0.4",
-    "bumpp": "^7.1.1",
-    "eslint": "^8.0.1",
-    "esno": "^0.10.1",
+    "@antfu/eslint-config": "^0.40.2",
+    "@types/cli-progress": "^3.11.0",
+    "@types/fs-extra": "^11.0.1",
+    "@types/node": "^20.5.1",
+    "@types/yargs": "^17.0.24",
+    "bumpp": "^9.1.1",
+    "eslint": "^8.47.0",
+    "esno": "^0.17.0",
     "lodash-es": "^4.17.21",
-    "tsup": "^5.4.2",
-    "typescript": "^4.4.4"
+    "tsup": "^7.2.0",
+    "typescript": "^5.1.6"
+  },
+  "eslintConfig": {
+    "extends": "@antfu",
+    "rules": {
+      "no-console": "off",
+      "antfu/no-cjs-exports": "off"
+    }
   }
 }
