feat: update deps

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "export-size",
   "type": "module",
   "version": "0.7.0",
-  "packageManager": "pnpm@8.9.2",
+  "packageManager": "pnpm@10.28.2",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/antfu/export-size#readme",
@@ -27,37 +27,38 @@
   ],
   "scripts": {
     "build": "tsup",
-    "dev": "esno src/cli.ts",
-    "prepublishOnly": "npm run build",
-    "release": "bumpp && npm publish",
+    "dev": "tsx src/cli.ts",
+    "start": "tsx src/cli.ts",
+    "prepublishOnly": "pnpm run build",
+    "release": "bumpp",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@babel/parser": "^7.23.0",
-    "@babel/traverse": "^7.23.2",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "chalk": "^5.3.0",
+    "@babel/parser": "^7.29.0",
+    "@babel/traverse": "^7.29.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "chalk": "^5.6.2",
     "cli-progress": "^3.12.0",
-    "cli-table3": "^0.6.3",
-    "enhanced-resolve": "^5.15.0",
-    "esbuild": "^0.19.5",
-    "filesize": "^10.1.0",
-    "fs-extra": "^11.1.1",
-    "rollup": "^3.29.4",
-    "terser": "^5.22.0",
-    "yargs": "^17.7.2"
+    "cli-table3": "^0.6.5",
+    "enhanced-resolve": "^5.19.0",
+    "esbuild": "^0.27.2",
+    "filesize": "^11.0.13",
+    "fs-extra": "^11.3.3",
+    "rollup": "^4.57.1",
+    "terser": "^5.46.0",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.27",
-    "@types/cli-progress": "^3.11.4",
-    "@types/fs-extra": "^11.0.3",
-    "@types/node": "^20.8.7",
-    "@types/yargs": "^17.0.29",
-    "bumpp": "^9.2.0",
+    "@antfu/eslint-config": "^7.2.0",
+    "@types/cli-progress": "^3.11.6",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^25.2.0",
+    "@types/yargs": "^17.0.35",
+    "bumpp": "^10.4.0",
     "eslint": "^8.51.0",
-    "esno": "^0.17.0",
-    "lodash-es": "^4.17.21",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "lodash-es": "^4.17.23",
+    "tsup": "^8.5.1",
+    "tsx": "^4.8.0",
+    "typescript": "^5.9.3"
   }
 }
